@@ -7,7 +7,6 @@ import (
 	"net/http"
 	"encoding/json"
 	"github.com/piotrnar/gocoin/lib/btc"
-	"github.com/piotrnar/gocoin/lib/utxo"
 	"github.com/piotrnar/gocoin/lib/others/sys"
 	"github.com/piotrnar/gocoin/client/usif"
 	"github.com/piotrnar/gocoin/client/common"
@@ -130,7 +129,7 @@ func json_system(w http.ResponseWriter, r *http.Request) {
 	out.Net_block_qsize = len(network.NetBlocks)
 	out.Net_tx_qsize = len(network.NetTxs)
 	out.Heap_size, out.Heap_sysmem = sys.MemUsed()
-	out.Qdb_extramem = int64(utxo.Memory.Bytes)
+	out.Qdb_extramem = int64(common.Memory.Bytes)
 	out.Ecdsa_verify_cnt = btc.EcdsaVerifyCnt()
 	out.Average_block_size = common.AverageBlockSize.Get()
 	out.Average_fee = common.GetAverageFee()
