@@ -189,7 +189,7 @@ func vlen2size(uvl uint64) int {
 
 // returns UTXO-heap pointer to the freshly allocated serialized record
 // full - to have entire 256 bits of TxID at the beginning of the record
-// use_buf - the data will be serialized into this memory. if nil, it will be allocated by Memory.Malloc()
+// use_buf - the data will be serialized into this memory. if nil, it will be allocated by Memory_Malloc()
 func (rec *UtxoRec) Serialize(full bool, use_buf []byte) (buf []byte) {
 	var le, of int
 	var any_out bool
@@ -222,7 +222,7 @@ func (rec *UtxoRec) Serialize(full bool, use_buf []byte) (buf []byte) {
 	}
 
 	if use_buf == nil {
-		buf, _ = Memory.Malloc(le)
+		buf = Memory_Malloc(le)
 	} else {
 		buf = use_buf[:le]
 	}
