@@ -239,6 +239,12 @@ Note that the current satoshi client has a "feature" that causes it to refuse co
 <td class="cfg_info"> A threshold (in percent) to trigger Go's garbage collector engine.</td>
 </tr>
 <tr class="even">
+<td class="cfg_name"> Memory.UseGoHeap</td>
+<td class="cfg_type"> bool</td>
+<td> false</td>
+<td class="cfg_info"> Use native Go Heap and Garbage Collector for UTXO records.</td>
+</tr>
+<tr class="even">
 <td class="cfg_name"> Memory.MaxCachedBlks</td>
 <td class="cfg_type"> uint</td>
 <td> 200</td>
